# le-differ

./: Cargo.toml  README.md
src/: changed_files.rs  diff_viewer.rs  main.rs  sidebar_item.rs  theme.rs  title_bar.rs
